@@ -6,10 +6,10 @@ english:
   { enum | struct | union } <name>
   block [([<args>])] [returning <english>]
   <store>* <modifier>* [<C-type>]
-args: a comma separated list of [<name> as] <english>
-C-type: _Bool | char[{8|16|32}_t] | wchar_t | int | float | double | void
+args: a comma separated list of <name>, <english>, or <name> as <english>
+C-type: _Bool | char[{16|32}_t] | wchar_t | int | float | double | void
 cv-qual: _Atomic | const | restrict | volatile
 modifier: short | long | signed | unsigned | <cv-qual>
 name: a C identifier
-store: auto | extern | register | static | thread_local | typedef
+store: auto | extern | register | static | _Thread_local | typedef
 where: [] = 0 or 1; * = 0 or more; + = 1 or more; {} = one of; | = alternate
