@@ -1,0 +1,4 @@
+EXPECTED_EXIT=0
+cdecl -xc17 <<END
+help english
+END
